# embedded-cv-env

./: CMakeLists.txt  README.md
.cache/clangd/index/: common.c.CBDD0A76E39B46E2.idx  common.h.312F87DDBEEED4C1.idx  imagePro.c.80C77B3B855AD069.idx  imagePro.h.C152C407BFB6EE4F.idx  imgpro.c.2E871B4324FB1B00.idx  main.c.9D4D24C636F46D82.idx  main.h.A9818441FDE49B0F.idx
data/: 1.txt  1o.txt
include/: common.h  imagePro.h  main.h
scripts/: showphoto.py  transphoto.py
src/: common.c  imagePro.c  main.c
